# pegasus-ai-jupyter

./: .gitignore  LICENSE  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled11.ipynb  Untitled12.ipynb  Untitled14.ipynb  Untitled2.ipynb  Untitled24.ipynb  Untitled3.ipynb  Untitled5.ipynb  Untitled6.ipynb  Untitled7.ipynb  Untitled8.ipynb  Untitled9.ipynb  diamond_workflow.ipynb  install.sh  package-lock.json  package.json  pyproject.toml  realestate_prediction_workflow.ipynb  tsconfig.json  workflow.yml
.opencode/agents/: pegasus-pipeline-debugger.md  pegasus-workflow-architect.md
diamond-workflow/: Dockerfile
jupyter-config/jupyter_server_config.d/: jupyterlab_pegasus.json
jupyterlab_pegasus/: __init__.py  config.py
jupyterlab_pegasus/handlers/: knowledge.py  llm.py  workflow.py
jupyterlab_pegasus/labextension/: package.json
jupyterlab_pegasus/opencode_data/: config.json
jupyterlab_pegasus/opencode_data/agents/: pegasus-data-engineer.md
knowledge/agents/: data-engineer.md  pipeline-debugger.md  workflow-architect.md
knowledge/references/: PEGASUS_AI.md
knowledge/skills/convert/: canonical.md  metadata.json
knowledge/skills/debug/: canonical.md  metadata.json
knowledge/skills/dockerfile/: canonical.md  metadata.json
knowledge/skills/help/: canonical.md  metadata.json
knowledge/skills/kiso/: canonical.md  metadata.json
knowledge/skills/provd/: canonical.md  metadata.json
realestate-workflow/: Dockerfile  workflow_generator.py
schema/: plugin.json
src/: index.ts  pegasusCell.tsx
style/: pegasus.css
(+6 files in other folders)
